--- a/src/GalapagoshaTestScr.mxml
+++ b/src/GalapagoshaTestScr.mxml
@@ -525,7 +525,7 @@
 						 source="@Embed('../assets/ninjaBtn.png')"/>
 			</s:Group>
 			<s:Group width="500" height="100" horizontalCenter="0" verticalCenter="850" click="bananaTermsBtn_clickHandler(event)" includeIn="menu">			
-			<s:Label horizontalCenter="0" styleName="headerSmall" text="Правила акции"
+			<s:Label horizontalCenter="0" styleName="headerSmall" text="Выиграй поездку в Эквадор!"
 					 textDecoration="underline" verticalCenter="0"/>
 			</s:Group>
 			<s:BorderContainer includeIn="terms" x="0" y="0" width="1080" height="1920"
@@ -536,7 +536,7 @@
 				<s:Label y="480" width="800" height="1150" chromeColor="#000000" color="#000000"
 						 fontFamily="BananaFontItal" fontSize="30" horizontalCenter="0"
 						 lineHeight="40"
-						 text="Этим летом у тебя есть уникальная возможность выиграть поездку в Эквадор на двоих. Для этого участвуй в акции &quot;Продли свое лето&quot; с 01 июня 2013 года по 21 сентября 2013.&#xd;&#xd;Для участия в акции необходимо купить связку бананов, сохранить чек, подтверждающий покупку и сделать фото на фоне брендированного интерактивного стенда &quot;Супер Банан&quot;.&#xd;&#xd;Заполни специальную форму на сайте banana-ecuador.ru или бананыизэквадора.рф, где укажи: ФИО, паспортные данные, контактную информацию, зарегистрируй номер чека и, главное, прикрепи фото на фоне стенда «Супер Банан». Увеличивай свой шанс на победу, покупай бананы из Эквадора и регистрируй максимальное количество чеков!&#xd;&#xd;Победитель акции будет определен 22 сентября 2013 года методом случайной выборки. Победителю сообщается о выигрыше по указанному им контактному телефону. Потеря участником акции товарного чека лишает участника права на получение приза.&#xd;&#xd;Имена и фамилии победителей будут опубликованы на сайте banana-ecuador.ru и бананыизэквадора.рф."
+						 text="Правила участия в акции &quot;Продли свое лето!&quot;&#xd;Шаг 1. Сделай фото со стендом &quot;Супер Банан&quot;, рядом с которым сейчас стоишь!&#xd;Шаг 2. Купи связку эквадорских бананов и сохрани чек&#xd;Шаг 3. Зарегистрируй номер чека и фото на сайте banana-ecuador.ru или бананыизэквадора.рф с 01 июня по 21 сентября 2013 &#xd;Почти победа! Жди звонка от Галапагоши в сентябре! Поездка в Эквадор для счастливчика будет сказочной! :)&#xd;"
 						 textAlign="center"/>
 				<s:Group top="0" width="1080" height="1920"
 						 click="button1_clickHandler(event)" horizontalCenter="0">			
